--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@
   .input {
     @apply w-full px-4 py-3 border border-gray-300 rounded-lg ;
   }
+  .input-style {
+      @apply p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-emerald-500 focus:outline-none;
+    }
 }
